syntax = "proto3";

package com.ajaxproject.api.internalapi.finance.input.reqreply;

import "com/ajaxproject/internalapi/finance/commonmodels/currency.proto";

option java_multiple_files = true;

message StreamCurrencyByCodeRequest {
  string code = 1;
}

message StreamCurrencyByCodeResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    com.ajaxproject.internalapi.finance.commonmodels.Currency currency = 1;
  }

  message Failure {
    string message = 100;
  }
}
